js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-return-await-typeof-import.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
return
await
typeof
import
;
}
